--- a/Server/Server.csproj
+++ b/Server/Server.csproj
@@ -11,9 +11,12 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Autofac" Version="4.6.2" />
+    <PackageReference Include="Autofac.Extensions.DependencyInjection" Version="4.2.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="2.0.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="2.0.1" />
     <PackageReference Include="NServiceBus" Version="7.0.0-beta0012" />
+    <PackageReference Include="NServiceBus.Autofac" Version="7.0.0-beta0004" />
     <PackageReference Include="NServiceBus.Callbacks" Version="3.0.0-beta0003" />
   </ItemGroup>
 
